# device_board_goodix

./: BUILD.gn  README.en.md  README.md
drivers/: BUILD.gn
gr5515_sk/: BUILD.gn  Kconfig.liteos_m.board
gr5515_sk/liteos_m/: BUILD.gn  config.gni
hcs/: BUILD.gn  gr5515_sk.hcs
